--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - GO_ENV=development
       - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - backend
 
@@ -39,6 +40,11 @@ services:
       - backend
     command:
       ["postgres", "-c", "listen_addresses=*", "-c", "max_connections=200", "-c", "port=5455"]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d dbname -p 5455"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata:
