Updated Dev and Prod Docker Compose

--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -1,19 +1,17 @@
-version: "3.8"
-
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../
+      dockerfile: infra/dev/Dockerfile
     ports:
-      - "8080:8080"
+      - "8085:8085"
     volumes:
-      # Mount current directory to /app with cached optimization
-      - .:/app:cached
+      # Mount project root directory to /app with cached optimization
+      - ../../:/app:cached
       # Exclude tmp directory (Air's build directory)
       - /app/tmp
     environment:
-      - PORT=8080
+      - PORT=8085
       - GO_ENV=development
       - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable
     depends_on:
