Fixed Time issue

--- a/infra/prod/docker-compose.yml
+++ b/infra/prod/docker-compose.yml
@@ -2,32 +2,38 @@ services:
   app:
     build:
       context: ../../
-      dockerfile: ./infra/prod/Dockerfile
+      dockerfile: infra/dev/Dockerfile
     ports:
       - "8085:8085"
+    volumes:
+      # Mount project root directory to /app with cached optimization
+      - ../../:/app:cached
+      # Exclude tmp directory (Air's build directory)
+      - /app/tmp
     environment:
+      - TZ=America/New_York
       - PORT=8085
-      - GO_ENV=production
-      - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable
+      - GO_ENV=development
+      - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable&timezone=America/New_York
     depends_on:
       db:
         condition: service_healthy
     networks:
       - backend
-    restart: always
 
   db:
     image: postgres:16-alpine
     restart: always
     environment:
+      TZ: America/New_York
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: dbname
       POSTGRES_PORT: 5455
     ports:
       - "5455:5455"
-    # expose:
-    #   - 5455
+    expose:
+      - 5455
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
