--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - TZ=America/New_York
       - PORT=8085
       - GO_ENV=development
-      - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable
+      - database_dsn=postgres://user:password@db:5455/dbname?sslmode=disable&timezone=America/New_York
     depends_on:
       db:
         condition: service_healthy
